--- a/What the Hack/public/css/app.css
+++ b/What the Hack/public/css/app.css
@@ -1,321 +1,3 @@
-.header {
-  background-color: #FFFFFF;
-  position: fixed;
-  width: 100%;
-  top: 0;
-}
-.header nav {
-  display: flex;
-  align-items: center;
-  font-size: 1.25rem;
-  font-weight: 500;
-}
-.header nav a:not(:last-child) {
-  margin-right: 48px;
-}
-.header__innerContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 24px 0;
-}
-.header__navUnderline {
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  margin-top: 16px;
-  background: white;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #c93e9d 70%, #9d2c79 100%);
-}
-
-.footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  padding: 24px 0px;
-  background-image: url("/images/backgrounds/footer_bg.png");
-  background-color: #3c0b24;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-.footer h5 {
-  color: #FFFFFF;
-}
-
-.button__primary {
-  background-color: #9D2C79;
-  color: #FFFFFF;
-  border-radius: 4px;
-  transition-duration: 0.2s;
-}
-.button__primary__verySmall {
-  padding: 8px 16px;
-  font-size: 1rem;
-  font-weight: 300;
-}
-.button__primary__small {
-  padding: 12px 24px;
-  font-size: 1rem;
-  font-weight: normal;
-}
-.button__primary__medium {
-  padding: 16px 32px;
-  font-size: 1rem;
-  font-weight: 500;
-}
-.button__primary__large {
-  padding: 20px 40px;
-  font-size: 1rem;
-  font-weight: bold;
-}
-.button__primary:hover {
-  background-color: #C93E9D;
-}
-.button__primary:active {
-  background-color: #D66EB5;
-}
-.button__secondary {
-  background-color: #000000;
-  color: #FFFFFF;
-  border-radius: 4px;
-  transition-duration: 0.2s;
-}
-.button__secondary__verySmall {
-  padding: 8px 16px;
-  font-size: 1rem;
-  font-weight: 300;
-}
-.button__secondary__small {
-  padding: 12px 24px;
-  font-size: 1rem;
-  font-weight: normal;
-}
-.button__secondary__medium {
-  padding: 16px 32px;
-  font-size: 1rem;
-  font-weight: 500;
-}
-.button__secondary__large {
-  padding: 20px 40px;
-  font-size: 1rem;
-  font-weight: bold;
-}
-.button__secondary:hover {
-  background-color: #333333;
-}
-.button__secondary:active {
-  background-color: #666666;
-}
-.button__tertiary {
-  color: #000000;
-  background-color: #9ca3af;
-  font-size: 1rem;
-  font-weight: normal;
-  margin-right: 10px;
-  border-radius: 4px;
-}
-.button__tertiary:hover {
-  color: #C93E9D;
-}
-.button__tertiary:active {
-  color: #C93E9D;
-}
-
-.input__text {
-  display: flex;
-  flex-direction: column;
-  color: #000000;
-}
-.input__text label {
-  font-size: 1rem;
-  font-weight: 300;
-  padding-bottom: 4px;
-}
-.input__text input, .input__text textarea {
-  padding: 8px 12px;
-  border: 2px solid #000000;
-  border-radius: 4px;
-  font-size: 1rem;
-  font-weight: normal;
-}
-.input__text textarea {
-  width: 100%;
-  min-height: 320px;
-}
-.input__text:hover {
-  color: #C93E9D;
-}
-.input__text:hover input, .input__text:hover textarea {
-  border: 2px solid #C93E9D;
-}
-.input__text:focus-within {
-  color: #C93E9D;
-}
-.input__text:focus-within input, .input__text:focus-within textarea {
-  border: 2px solid #C93E9D;
-}
-
-.quillInput label {
-  font-size: 1rem;
-  font-weight: 300;
-}
-.quillInput__container {
-  margin-top: 4px;
-  border: 2px solid #000000;
-  border-radius: 4px;
-}
-.quillInput__container .ql-container {
-  border: none;
-  height: 480px;
-}
-.quillInput__container .ql-toolbar {
-  border: none;
-  border-bottom: 1px solid #000000;
-}
-.quillInput:hover label, .quillInput:focus-within label {
-  color: #C93E9D;
-}
-.quillInput:hover > div, .quillInput:focus-within > div {
-  border: 2px solid #C93E9D;
-}
-
-.underline {
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  margin-top: 16px;
-}
-.underline__rightToLeft {
-  background: white;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #c93e9d 70%, #9d2c79 100%);
-}
-.underline__leftToRight {
-  background: #9d2c79;
-  background: linear-gradient(90deg, #9d2c79 0%, #c93e9d 30%, rgba(255, 255, 255, 0) 100%);
-}
-.underline__middle {
-  background: white;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, #c93e9d 35%, #9d2c79 50%, #c93e9d 65%, rgba(255, 255, 255, 0) 100%);
-}
-
-.textLink {
-  transition-duration: 0.2s;
-}
-.textLink:hover {
-  color: #C93E9D;
-}
-.textLink:active {
-  color: #D66EB5;
-}
-.textLink__black {
-  color: #000000;
-}
-.textLink__red {
-  color: #C93838;
-}
-
-.table {
-  width: 100%;
-}
-.table th {
-  background-color: #9D2C79;
-  color: #FFFFFF;
-  text-align: left;
-  padding: 8px 12px;
-  font-size: 1rem;
-  font-weight: bold;
-}
-.table td {
-  padding: 8px 12px;
-}
-.table tr:nth-child(odd) {
-  background-color: #EFEFEF;
-}
-
-@font-face {
-  font-family: DINPro;
-  font-style: normal;
-  font-weight: 300;
-  src: url("/fonts/What_The_hack fonts/DINPro-Light.otf");
-}
-@font-face {
-  font-family: DINPro;
-  font-style: normal;
-  font-weight: normal;
-  src: url("/fonts/What_The_hack fonts/DINPro-Regular.otf");
-}
-@font-face {
-  font-family: DINPro;
-  font-style: normal;
-  font-weight: 500;
-  src: url("/fonts/What_The_hack fonts/DINPro-Medium.otf");
-}
-@font-face {
-  font-family: DINPro;
-  font-style: normal;
-  font-weight: bold;
-  src: url("/fonts/What_The_hack fonts/DINPro-Bold.otf");
-}
-body {
-  overflow-wrap: break-word;
-  word-wrap: break-word;
-  height: 100vh;
-  max-height: 100vh;
-}
-
-.typography h1 {
-  font-size: 3.052rem;
-  font-weight: bold;
-  line-height: 57.22px;
-}
-.typography h2 {
-  font-size: 2.441rem;
-  font-weight: bold;
-  line-height: 45.77px;
-}
-.typography h3 {
-  font-size: 1.953rem;
-  font-weight: 500;
-  line-height: 36.62px;
-}
-.typography h4 {
-  font-size: 1.563rem;
-  font-weight: 500;
-  line-height: 29.3px;
-}
-.typography h5 {
-  font-size: 1.25rem;
-  font-weight: normal;
-  line-height: 23.44px;
-}
-.typography p {
-  font-size: 1rem;
-  font-weight: normal;
-}
-.typography ol {
-  list-style-type: auto;
-  padding-left: 32px;
-}
-.typography ul {
-  list-style-type: disc;
-  padding-left: 32px;
-}
-.typography blockquote {
-  padding-left: 32px;
-  border-left: 8px solid #333333;
-}
-.typography .ql-align-justify {
-  min-height: 32px;
-}
-
-.pageGrid {
-  height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-}
 /*
 ! tailwindcss v3.0.6 | MIT License | https://tailwindcss.com
 *//*
@@ -507,7 +189,7 @@ button,
 [type='reset'],
 [type='submit'] {
   -webkit-appearance: button; /* 1 */
-  /* background-color: transparent; */ /* 2 */
+  background-color: transparent; /* 2 */
   background-image: none; /* 2 */
 }
 
@@ -925,14 +607,14 @@ select {
 .relative {
   position: relative;
 }
-.left-0 {
-  left: 0px;
+.top-0 {
+  top: 0px;
 }
 .right-0 {
   right: 0px;
 }
-.top-0 {
-  top: 0px;
+.left-0 {
+  left: 0px;
 }
 .z-0 {
   z-index: 0;
@@ -946,8 +628,14 @@ select {
 .col-span-4 {
   grid-column: span 4 / span 4;
 }
+.col-span-6 {
+  grid-column: span 6 / span 6;
+}
 .col-start-5 {
   grid-column-start: 5;
+}
+.col-start-4 {
+  grid-column-start: 4;
 }
 .mx-auto {
   margin-left: auto;
@@ -963,14 +651,8 @@ select {
 .-ml-px {
   margin-left: -1px;
 }
-.ml-1 {
-  margin-left: 0.25rem;
-}
-.-mr-2 {
-  margin-right: -0.5rem;
-}
-.mt-3 {
-  margin-top: 0.75rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 .mt-2 {
   margin-top: 0.5rem;
@@ -981,30 +663,6 @@ select {
 .mt-8 {
   margin-top: 2rem;
 }
-.mr-2 {
-  margin-right: 0.5rem;
-}
-.ml-2 {
-  margin-left: 0.5rem;
-}
-.mt-4 {
-  margin-top: 1rem;
-}
-.ml-4 {
-  margin-left: 1rem;
-}
-.ml-12 {
-  margin-left: 3rem;
-}
-.-mt-px {
-  margin-top: -1px;
-}
-.mt-6 {
-  margin-top: 1.5rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
 .mr-4 {
   margin-right: 1rem;
 }
@@ -1013,6 +671,36 @@ select {
 }
 .mt-1 {
   margin-top: 0.25rem;
+}
+.mt-4 {
+  margin-top: 1rem;
+}
+.ml-4 {
+  margin-left: 1rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.ml-1 {
+  margin-left: 0.25rem;
+}
+.mr-2 {
+  margin-right: 0.5rem;
+}
+.ml-2 {
+  margin-left: 0.5rem;
+}
+.ml-12 {
+  margin-left: 3rem;
+}
+.-mt-px {
+  margin-top: -1px;
+}
+.mt-3 {
+  margin-top: 0.75rem;
+}
+.-mr-2 {
+  margin-right: -0.5rem;
 }
 .block {
   display: block;
@@ -1038,6 +726,15 @@ select {
 .h-5 {
   height: 1.25rem;
 }
+.h-full {
+  height: 100%;
+}
+.h-20 {
+  height: 5rem;
+}
+.h-8 {
+  height: 2rem;
+}
 .h-16 {
   height: 4rem;
 }
@@ -1050,23 +747,26 @@ select {
 .h-6 {
   height: 1.5rem;
 }
-.h-full {
-  height: 100%;
-}
-.h-8 {
-  height: 2rem;
-}
-.h-20 {
-  height: 5rem;
-}
 .min-h-screen {
   min-height: 100vh;
 }
 .w-5 {
   width: 1.25rem;
 }
+.w-20 {
+  width: 5rem;
+}
+.w-full {
+  width: 100%;
+}
+.w-8 {
+  width: 2rem;
+}
 .w-auto {
   width: auto;
+}
+.w-48 {
+  width: 12rem;
 }
 .w-4 {
   width: 1rem;
@@ -1074,26 +774,14 @@ select {
 .w-6 {
   width: 1.5rem;
 }
-.w-48 {
-  width: 12rem;
-}
-.w-8 {
-  width: 2rem;
-}
-.w-full {
-  width: 100%;
-}
-.w-20 {
-  width: 5rem;
-}
 .max-w-7xl {
   max-width: 80rem;
 }
-.max-w-xl {
-  max-width: 36rem;
-}
 .max-w-6xl {
   max-width: 72rem;
+}
+.max-w-xl {
+  max-width: 36rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -1192,11 +880,11 @@ select {
 .border-t {
   border-top-width: 1px;
 }
-.border-b-2 {
-  border-bottom-width: 2px;
-}
 .border-r {
   border-right-width: 1px;
+}
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 .border-l-4 {
   border-left-width: 4px;
@@ -1205,36 +893,36 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-.border-gray-100 {
-  --tw-border-opacity: 1;
-  border-color: rgb(243 244 246 / var(--tw-border-opacity));
-}
 .border-gray-200 {
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
-}
-.border-indigo-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(129 140 248 / var(--tw-border-opacity));
-}
-.border-transparent {
-  border-color: transparent;
 }
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
+.border-transparent {
+  border-color: transparent;
+}
+.border-indigo-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(129 140 248 / var(--tw-border-opacity));
+}
+.border-gray-100 {
+  --tw-border-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-border-opacity));
+}
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-gray-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 .bg-indigo-50 {
   --tw-bg-opacity: 1;
@@ -1243,11 +931,11 @@ select {
 .fill-current {
   fill: currentColor;
 }
-.p-2 {
-  padding: 0.5rem;
-}
 .p-6 {
   padding: 1.5rem;
+}
+.p-2 {
+  padding: 0.5rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1261,37 +949,58 @@ select {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-.px-32 {
-  padding-left: 8rem;
-  padding-right: 8rem;
-}
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.px-32 {
+  padding-left: 8rem;
+  padding-right: 8rem;
 }
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.pt-8 {
+  padding-top: 2rem;
+}
+.pr-4 {
+  padding-right: 1rem;
+}
+.pt-1 {
+  padding-top: 0.25rem;
+}
+.pl-3 {
+  padding-left: 0.75rem;
 }
 .pt-2 {
   padding-top: 0.5rem;
@@ -1305,27 +1014,6 @@ select {
 .pb-1 {
   padding-bottom: 0.25rem;
 }
-.pt-1 {
-  padding-top: 0.25rem;
-}
-.pb-8 {
-  padding-bottom: 2rem;
-}
-.pb-4 {
-  padding-bottom: 1rem;
-}
-.pt-8 {
-  padding-top: 2rem;
-}
-.pt-6 {
-  padding-top: 1.5rem;
-}
-.pl-3 {
-  padding-left: 0.75rem;
-}
-.pr-4 {
-  padding-right: 1rem;
-}
 .text-center {
   text-align: center;
 }
@@ -1336,21 +1024,21 @@ select {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 .font-medium {
   font-weight: 500;
@@ -1364,17 +1052,17 @@ select {
 .leading-5 {
   line-height: 1.25rem;
 }
-.leading-7 {
-  line-height: 1.75rem;
-}
 .leading-tight {
   line-height: 1.25;
 }
-.tracking-widest {
-  letter-spacing: 0.1em;
+.leading-7 {
+  line-height: 1.75rem;
 }
 .tracking-wider {
   letter-spacing: 0.05em;
+}
+.tracking-widest {
+  letter-spacing: 0.1em;
 }
 .text-gray-500 {
   --tw-text-opacity: 1;
@@ -1384,33 +1072,17 @@ select {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-.text-gray-400 {
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
 .text-gray-800 {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-.text-green-600 {
-  --tw-text-opacity: 1;
-  color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 .text-red-600 {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
 }
-.text-white {
+.text-gray-600 {
   --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -1420,13 +1092,29 @@ select {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
-.text-indigo-700 {
+.text-gray-400 {
   --tw-text-opacity: 1;
-  color: rgb(67 56 202 / var(--tw-text-opacity));
+  color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+.text-indigo-700 {
+  --tw-text-opacity: 1;
+  color: rgb(67 56 202 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -1447,9 +1135,9 @@ select {
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow {
@@ -1457,9 +1145,9 @@ select {
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .ring-1 {
@@ -1507,13 +1195,13 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
-.hover\:bg-gray-100:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
@@ -1527,13 +1215,13 @@ select {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
-.hover\:text-gray-700:hover {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
 .hover\:text-gray-900:hover {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+.hover\:text-gray-700:hover {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 .hover\:text-gray-800:hover {
   --tw-text-opacity: 1;
@@ -1546,21 +1234,21 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
-.focus\:border-gray-300:focus {
+.focus\:border-indigo-300:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-.focus\:border-indigo-700:focus {
-  --tw-border-opacity: 1;
-  border-color: rgb(67 56 202 / var(--tw-border-opacity));
+  border-color: rgb(165 180 252 / var(--tw-border-opacity));
 }
 .focus\:border-gray-900:focus {
   --tw-border-opacity: 1;
   border-color: rgb(17 24 39 / var(--tw-border-opacity));
 }
-.focus\:border-indigo-300:focus {
+.focus\:border-indigo-700:focus {
   --tw-border-opacity: 1;
-  border-color: rgb(165 180 252 / var(--tw-border-opacity));
+  border-color: rgb(67 56 202 / var(--tw-border-opacity));
+}
+.focus\:border-gray-300:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 .focus\:bg-gray-100:focus {
   --tw-bg-opacity: 1;
@@ -1578,10 +1266,6 @@ select {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
-.focus\:text-gray-500:focus {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
 .focus\:text-indigo-800:focus {
   --tw-text-opacity: 1;
   color: rgb(55 48 163 / var(--tw-text-opacity));
@@ -1589,6 +1273,10 @@ select {
 .focus\:text-gray-800:focus {
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.focus\:text-gray-500:focus {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 .focus\:outline-none:focus {
   outline: 2px solid transparent;
@@ -1664,16 +1352,16 @@ select {
     margin-bottom: -1px;
   }
 
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
   .sm\:ml-10 {
     margin-left: 2.5rem;
   }
 
   .sm\:ml-6 {
     margin-left: 1.5rem;
-  }
-
-  .sm\:ml-0 {
-    margin-left: 0px;
   }
 
   .sm\:block {
