WTH productieklaar gemaakt. Quill vervangen door Summernote. Quill is in dit geval niet handig vanwege zijn API afhankelijkheid. Eén baseblades toegevoegd ivm de sturing van de pagina's met volledige artikelen. Plain heeft nu collapsed artikelen. Verder vele kleine aanpassingen zodat alles naar behoren en eenduidig werkt.

--- a/What the Hack/public/css/app1.css
+++ b/What the Hack/public/css/app1.css
@@ -218,31 +218,36 @@
   font-family: DINPro;
   font-style: normal;
   font-weight: 300;
-  src: url("/fonts/What_The_hack fonts/DINPro-Light.otf");
+  src: url("/css/font/DINPro-Light.otf");
 }
 @font-face {
   font-family: DINPro;
   font-style: normal;
   font-weight: normal;
-  src: url("/fonts/What_The_hack fonts/DINPro-Regular.otf");
+  src: url("/css/font/DINPro-Regular.otf");
 }
 @font-face {
   font-family: DINPro;
   font-style: normal;
   font-weight: 500;
-  src: url("/fonts/What_The_hack fonts/DINPro-Medium.otf");
+  src: url("/css/font/DINPro-Medium.otf");
 }
 @font-face {
   font-family: DINPro;
   font-style: normal;
   font-weight: bold;
-  src: url("/fonts/What_The_hack fonts/DINPro-Bold.otf");
+  src: url("/css/font/DINPro-Bold.otf");
 }
 body {
   overflow-wrap: break-word;
   word-wrap: break-word;
   height: 100vh;
   max-height: 100vh;
+}
+
+html {
+  font-size: unset;
+  -webkit-tap-highlight-color: unset;
 }
 
 .typography {
