--- a/What the Hack/resources/sass/app1.scss
+++ b/What the Hack/resources/sass/app1.scss
@@ -7,7 +7,6 @@
 @import 'components/textLink.scss';
 @import 'components/table.scss';
 
-
 @font-face {
     font-family: DINPro;
     font-style: normal;
@@ -102,4 +101,27 @@ html {
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
+  
+// Drowdown menu in Navbar
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    text-align: center;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1; // Bovenaan
+    border-radius: 10px;
+}
+.dropdown-content a {
+    padding: 16px 16px;
+    text-decoration: none;
+    display: block;
+}
+.dropdown-content a:hover {color: $colour-primary-lighter}
+.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropbtn {color: $colour-primary-lightest;}
